# zennode

./: .gitignore  CHANGELOG.md  Cargo.toml  ENCODE-FULL.md  README.md  SCHEMA_PLAN.md  SPEC.md  justfile
.github/workflows/: ci.yml
apidoc/: Cargo.toml
apidoc/tests/: public_api_doc.rs
docs/public-api/: ABLATION-zennode.md  zennode-derive.features.txt  zennode-derive.internal.txt  zennode-derive.txt  zennode.features.txt  zennode.internal.txt  zennode.txt
zennode/: Cargo.toml  README.md
zennode-derive/: Cargo.toml
zennode-derive/src/: attrs.rs  codegen.rs  lib.rs  node.rs  node_enum.rs
zennode/src/: error.rs  json_schema.rs  kv.rs  lib.rs  nodes.rs  ordering.rs  param.rs  registry.rs  schema.rs  serde_impl.rs
zennode/tests/: derive_enum.rs  derive_node.rs  public_api_doc.rs
zenode-derive/src/: attrs.rs  node.rs  node_enum.rs
zenode/src/: json_schema.rs  kv.rs  lib.rs  nodes.rs  registry.rs  schema.rs  serde_impl.rs
zenode/tests/: derive_enum.rs  derive_node.rs  shared_nodes.rs
